# ssggcnn_ur5_grasping

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: ggcnn_param.yaml  joint_names.yaml  ssd_param.yaml  ur5.srdf
controller/: ur5_controllers.yaml  ur5gripper_controllers.yaml
data/: _description.txt
files_to_substitute/: CMakeLists.txt  gazebo_ros_realsense.cpp  robotiq_85_gripper.transmission.xacro
install/: install.sh
launch/: detection.launch  filter.launch  gazebo_ur5.launch  moveit.rviz  rs_d435_camera.launch  rs_from_file.launch  rviz_ur5.launch  ur5_ros_control.launch
models/: .gitignore
models/bico_dosador/: model.sdf
models/bico_dosador/materials/scripts/: box.material
models/bico_dosador/meshes/: bico_dosador.dae
models/bin_box/: model.sdf
models/box/: model.sdf
models/box/materials/scripts/: box.material
models/box/meshes/: CUBE2.dae
models/little_bin_box/: model.sdf
models/little_bin_box/meshes/: little_bin_box.dae
models/markerbot/: model.sdf
models/moldura_final/: model.sdf  parameters.txt
models/moldura_final/meshes/: moldura_final.dae
models/part1/: model.sdf
models/part1/meshes/: part1.dae
models/part2/: model.sdf
models/part2/meshes/: part2.dae
models/part3/: model.sdf
models/part3/meshes/: part3.dae
models/table/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
models/unob_1/: model.sdf
models/unob_1/meshes/: unob_1.dae
models/unob_2/: model.sdf
models/unob_2/meshes/: unob_2.dae
models/unob_3/: model.sdf
models/unob_3/meshes/: unob_3.dae
scripts/: GGCNN_table.py  SSD512_GGCNN.py  align_depth_to_color.py  change_gazebo_properties.py  command_GGCNN_ur5.py  get_image_server.py  kinematics.py  run_ggcnn.py  run_ggcnn_indices.py  run_ggcnn_ur5.py  spawn_model.py  spawn_model_bico_dosador.py  spawn_objects.py  spawn_objects_bin.py  spawn_objects_table.py  spawn_table.py  test_align_gazebo.py  test_cnn.py  ur5_open_loop.py  ur_inverse_kinematics.py
scripts/detection_pkg/: .gitignore  detection_examples.ipynb  setup.py
scripts/detection_pkg/Detection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/detection_pkg/detection/: Kinect.py  config.py  main.py  transforms.py
scripts/pcl_sim/: main.cpp
urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  plugin.gazebo.xacro  ur5.transmission.xacro  ur5_with_cam.urdf.xacro
worlds/: empty.world
